First skeleton commit for akka-http, basic job route outline added